# bmw-cardata-streaming-poc

./: .env.example  .gitignore  AUTHENTICATION.md  README.md  bmw_cardata.py  bmw_catalogue.py  bmw_data_catalogue.json  fetch_bmw_catalogue.py  main.py  pyproject.toml  requirements.txt  webui.py
bmw_docs/: integration.html  swagger-customer-api-v1.json  swagger-device-code-flow.json
templates/: dashboard.html
